Fix a break in the build.xml cleanup.  Improved single document view page.  Align and underline dataset title.

--- a/trunk/css/formatBox.css
+++ b/trunk/css/formatBox.css
@@ -11,10 +11,9 @@
 
 #title {
   font-size: 1.2em;
-}
-
-#title {
-  margin: 0.5em 1em 2em 0;
+  margin: 0.5em 1em 1em 0;
+  padding: 3px 0 3px 0;
+  border-bottom: solid 1px #eee;
 }
 
 #descEdit {
